refactor: add personnel
